# Learning

./: .version.swp  README.md  bash_script  test.html
C++/: README.md
C++/BtreeTerminal/: main.cpp
C++/Bubble_method/: main.cpp
C++/Class_by_efault/: main.cpp
C++/ContainerTest/: List.cpp  List.h  Makefile  main.cpp
C++/Cycle_while/: main.cpp
C++/Dijkstra_algorithm/: job  main.cpp
C++/Task1_1/: Man.cpp  (+5 more)
C++/test16/: BTree.cpp  BTree.h  CMakeLists.txt  Node.cpp  Node.h  Test16_1.pro  Test16_1.pro.user.dd5d384  global.cpp  global.h  graphwidget.cpp  graphwidget.h  inputdialog.cpp  inputdialog.h  inputdialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node.cpp.autosave
Docs/: Atom.md  C++.md  CLI.markdown  CLI.md  Git.md  LateX.md  Make_Manual.md  Markdown.md  UML.md  Unreal_Engine4.md  Vim.md  Vime  (2).mdown  gdb.md  html+css.md  js.md  linux.md  test.tex
Python/: Fibonacci.py  Lowenstein.py  factorial.py  sorting_by_bubble.py
Session_1/: Work_S1_1.cpp  Work_S1_12.cpp  Work_S1_2.cpp  Work_S1_4.cpp  Work_S1_5.cpp  Work_S1_9.cpp
Session_2/: Makefile  Work_S1_1.cpp  fraction.cpp
Web/: FizzBuzz.js
bash/: myscript
build-git_qt_test-Desktop_Qt_5_14_2_MinGW_64_bit-Debug/: .qmake.stash  Makefile  Makefile.Debug  Makefile.Release
git_qt_test/: git_qt_test.pro  main.cpp  time.cpp  time.h
js/: hello.js  test.js
kotlin/: Tavern.kt  Tavern.tk  typein.kt
ses1/: Work_S1_1.cpp  Work_S1_10.cpp  Work_S1_11.cpp  Work_S1_12.cpp  Work_S1_12_v2.cpp  Work_S1_3.cpp  Work_S1_6.cpp  Work_S1_7.cpp  Work_S1_8.cpp
Си/: Matrix.c  Merge.c  README.md  funсtion.c  lab_1.c
(+424 files in other folders)
